--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
         <form>
           <div class="subscription-form-container">
-            <input type="email" placeholder="Your email" />
+            <input type="email" placeholder="Email" />
             <a
               href="https://github.com/tanviroo7"
               target="_blank"
